// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/collaborator-avatars/CollaboratorAvatars render() should render component if collaborators.length > maxDisplayedUserAvatars 1`] = `
<PlainButton
  aria-hidden="false"
  className="collaborator-avatar-container"
  type="button"
>
  <div
    className="avatars-label"
  >
    <FormattedMessage
      defaultMessage="Shared with"
      id="boxui.collaboratorAvatars.collaboratorAvatarsLabel"
    />
  </div>
  <div
    className="avatars"
  >
    <CollaboratorAvatarItem
      hasCustomAvatar={false}
      id={0}
      key="collab-avatar-1"
      name="test a"
    />
    <CollaboratorAvatarItem
      id={1}
      key="collab-avatar-2"
      name="test b"
    />
    <CollaboratorAvatarItem
      hasCustomAvatar={true}
      id={2}
      key="collab-avatar-3"
      name="test c"
    />
  </div>
  <div
    className="avatars-count"
  >
    +3
  </div>
</PlainButton>
`;

exports[`features/collaborator-avatars/CollaboratorAvatars render() should render component if collaborators.length - maxDisplayedUserAvatars > maxAdditionalCollaboratorsNum 1`] = `
<PlainButton
  aria-hidden="false"
  className="collaborator-avatar-container"
  type="button"
>
  <div
    className="avatars-label"
  >
    <FormattedMessage
      defaultMessage="Shared with"
      id="boxui.collaboratorAvatars.collaboratorAvatarsLabel"
    />
  </div>
  <div
    className="avatars"
  >
    <CollaboratorAvatarItem
      hasCustomAvatar={false}
      id={0}
      key="collab-avatar-1"
      name="test a"
    />
    <CollaboratorAvatarItem
      id={1}
      key="collab-avatar-2"
      name="test b"
    />
  </div>
  <div
    className="avatars-count"
  >
    3+
  </div>
</PlainButton>
`;

exports[`features/collaborator-avatars/CollaboratorAvatars render() should render default component 1`] = `
<PlainButton
  aria-hidden="false"
  className="collaborator-avatar-container"
  type="button"
>
  <div
    className="avatars-label"
  >
    <FormattedMessage
      defaultMessage="Shared with"
      id="boxui.collaboratorAvatars.collaboratorAvatarsLabel"
    />
  </div>
  <div
    className="avatars"
  >
    <CollaboratorAvatarItem
      hasCustomAvatar={false}
      id={0}
      key="collab-avatar-1"
      name="test a"
    />
    <CollaboratorAvatarItem
      id={1}
      key="collab-avatar-2"
      name="test b"
    />
    <CollaboratorAvatarItem
      hasCustomAvatar={true}
      id={2}
      key="collab-avatar-3"
      name="test c"
    />
  </div>
</PlainButton>
`;
